--- a/blog-subsi/teste.html
+++ b/blog-subsi/teste.html
@@ -1,22 +1,44 @@
-
-
-<meta charset="UTF-8">
+<canvas width="600" height="400"></canvas>
 
 <script>
-    function pulaLinha() {
-        document.write("<br>");
+    //Base para trabalho
+    var tela = document.querySelector('canvas');
+    var pincel = tela.getContext('2d');
+    pincel.fillStyle = 'lightgray';
+    pincel.fillRect(0, 0, 600, 400);
+
+    //Nosso círculo
+    function desenhaCirculo(x, y, raio, cor) {
+        pincel.fillStyle = cor;
+        pincel.beginPath();
+        pincel.arc(x, y, raio, 0, 2 * Math.PI);
+        pincel.fill();
     }
 
-    function mostra(frase) {
-        document.write(frase);
+    //Funções de movimento
+
+    function limpaTela() {
+        pincel.clearRect(0, 0, 600, 400);
     }
 
-    function calculaImc(altura, peso) {
+    var raio = 20;
+    var sentidoCrescimento = 1;
 
-        return peso / ( altura * altura );
+    function atualizaTela() {
+
+        limpaTela();
+
+        if( raio >= 30) {
+            sentidoCrescimento = -1;
+        } else if (raio < 20) {
+            sentidoCrescimento = 1;
+        } 
+
+        desenhaCirculo(200, 200, raio, 'blue');
+        raio = raio + sentidoCrescimento;
     }
 
-             mostra("O meu IMC é " + Math.round(calculaImc(1.63, 48)));
+    setInterval(atualizaTela, 20);
 
 </script>
 
