--- a/blog-subsi/teste.html
+++ b/blog-subsi/teste.html
@@ -1,25 +1,49 @@
-<canvas width="600" height="400"></canvas>
+<!DOCTYPE html>
 
-<script>
+<html lang="pt-br">
 
-    var tela = document.querySelector('canvas');
-    var pincel = tela.getContext('2d');
+    <head>
+
+        <meta charset="utf-8">
+        <title>Barbearia Alura</title>
+        <link rel="stylesheet" href="style.css">
+
+    </head>
+
+    <body>
+
+        <img id= "banner" src="banner.jpg">
+
+        <div class="principal">
+
+            <h1>Sobre a Barbearia Alura</h1>
+
+            <p>Localizada no coração da cidade, a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+
+            <p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes".</strong></em></p>
+
+            <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+
+        </div>
 
 
-    pincel.fillStyle = 'lightgrey';
-    pincel.fillRect(0, 0, 600, 400);
+        <div class="beneficios">
+            <h2>Beneficios</h2>
 
-    pincel.fillStyle = 'green';
-    pincel.fillRect(0, 0, 200, 400);
+            <ul>
+                <li class="itens">Atendimento aos Clientes</li>
+                <li class="itens">Espaço Diferenciado</li>
+                <li class="itens">Localização</li>
+                <li class="itens">Profissionais Qualificados</li>
+            </ul>
 
-    pincel.fillStyle = 'red';
-    pincel.fillRect(400, 0, 200, 400);
+            <img src="beneficios.jpg" class="imagembeneficio">
 
-    pincel.fillStyle = 'yellow';
-    pincel.beginPath();
-    pincel.moveTo(300, 200);
-    pincel.lineTo(200, 400);
-    pincel.lineTo(400, 400);
-    pincel.fill();
 
-    </script>
+
+        </div>
+
+
+    </body>    
+
+</html>
