--- a/blog-subsi/teste.html
+++ b/blog-subsi/teste.html
@@ -1,114 +1,87 @@
 
 
 <meta charset="UTF-8">
+<h1>  Torne seu programa dinâmico com variáveis </h1>
+    <br>
+    <br>    
+        <script>
+            alert("Aula 3");
+        </script>
+<h4> Datas de aniversário - contas aritiméticas </h4>
+        <script>
+            document.write("Flávio nasceu em " + (2020 - 40));
+            document.write("<br>");
+            document.write("Roberto nasceu em " + (2020 - 39));
+            document.write("<br>");
+            document.write("Marcelo nasceu em " + (2020 - 41));
+        </script>    
+    <br>
+    <br>
+<h4> Reduzindo alterações </h4>
+<h5> Variavel: var ano = "colocar qualquer ano"</h5>
+        <script>
+            var ano = 2020;
+            document.write("Clóvis tem  " + (ano - 1980) + " anos");
+            document.write("<br>");
+            document.write("Jurema tem  " + (ano - 1985) + " anos");
+            document.write("<br>");
+            ano = 2015;
+            document.write("Aroldo tem " + (ano - 1983) + " anos");
+        </script>
+    <br>
+    <br>    
+<h4> Facilitando nossa vida! TABUADA com variáveis </h4>
+        <script>
+            var n = 8
+            document.write(n + "vezes 1 é " + n * 1+ "<br>");
+            document.write(n + "vezes 2 é " + n * 2+ "<br>");
+            document.write(n + "vezes 3 é " + n * 3+ "<br>");
+            document.write(n + "vezes 4 é " + n * 4+ "<br>");
+            document.write(n + "vezes 5 é " + n * 5+ "<br>");
+            document.write(n + "vezes 6 é " + n * 6+ "<br>");
+            document.write(n + "vezes 7 é " + n * 7+ "<br>");
+            document.write(n + "vezes 8 é " + n * 8+ "<br>");
+            document.write(n + "vezes 9 é " + n * 9+ "<br>");
+            document.write(n + "vezes 10 é " + n * 10+ "<br>");
+        </script>
+    <br>
+<h4> Variável - média </h4>
+        <script>
+            var media = (40+35+32)/3;
+            document.write("A média das idades de Clóvis, Jurema e Aroldo é " + Math.round(media));
+        </script>    
+    <br>
+    <br>
+<h4>O detetive Roy!</h4>
+        <script>
+            var idadeLinda = 12;
+            var idadeGuaraciara = 15;
+            var idadePérola = 13;
+            var mediaIdade = (idadeLinda + idadeGuaraciara + idadePérola)/3;
+            document.write("A média das idades das minhas filhas é " + Math.round(mediaIdade));
+        </script>
+    <br>
+    <br>
+<h4>ORoy agora é programador!</h4>
+        <script>
+    var idadeLinda = 12;
+    var idadeGuaraciara = 15;
+    var idadePerola = 13;
+    var totalIdades = (idadeLinda + idadeGuaraciara + idadePérola);
+    document.write("A média das idades das filhas do hacker é " + Math.round(totalIdades/3));
+        </script>
+    <br>
+    <br>
+<h3>Álcool ou Gasolina?</h3>
+        <script>
+            var tanque = 40;
+            var caminhoComGasolina = 480;
+            var consumoDeGasolina = (caminhoComGasolina / tanque);
+            var caminhoComAlcool = 300;
+            var consumoDeAlcool = (caminhoComAlcool / tanque);
+            document.write("Consumo de Gasolina é " + consumoDeGasolina + " km/l " + "<br>");
+            document.write("Consumo de Alcool é " + consumoDeAlcool + " km/l ");
+        </script>
 
-<canvas width="600" height="400"></canvas>
-
-<script>
-
-    function desenhaQuadrado(x, y, tamanho, cor) {
-
-        pincel.fillStyle = cor;
-        pincel.fillRect(x, y, tamanho, tamanho)
-        pincel.fill();
-    }
-
-    function desenhaCirculo(x, y, raio, cor) {
-
-        pincel.fillStyle = cor; // o padrão é blue
-        pincel.beginPath();
-        pincel.arc(x, y, raio, 0, 2 * 3.14);
-        pincel.fill();
-
-    }
-
-    function desenhaPaletaDeCores() {
-
-        desenhaQuadrado(xVermelho, yQuadrados, tamanhoQuadrados, 'red');
-        desenhaQuadrado(xVerde, yQuadrados, tamanhoQuadrados, 'green');
-        desenhaQuadrado(xAzul, yQuadrados, tamanhoQuadrados, 'blue');
-
-    }
-
-    function lidaComMovimentoDoMouse(evento) {
-
-        var x = evento.pageX - tela.offsetLeft;
-        var y = evento.pageY - tela.offsetTop;
-
-        // usando a nova função 
-        if(desenha && podeDesenharNaArea(x,y)) {
-
-            desenhaCirculo(x, y, 5, corAtual);
-        }
-    }
-
-    function habilitaDesenhar() {
-
-        desenha = true;
-    }
-
-    function desabilitaDesenhar() {
-
-        desenha = false;
-    }
-
-    function podeDesenharNaArea(x, y) {
-
-         if(x >= 0 && x < 3*tamanhoQuadrados && y >= 0 && y < tamanhoQuadrados) {
-            return false;
-        } else {
-            return true;
-        }
-    }
-
-function selecionaCor(evento) {
-
-        var x = evento.pageX - tela.offsetLeft;
-        var y = evento.pageY - tela.offsetTop;
-
-        // cada condição muda a variável `corAtual`
-
-        // começamos pela condição do y que é igual em todos os casos
-        if (y > yQuadrados && y < yQuadrados + tamanhoQuadrados) {
-
-            if (x > xVermelho && x < xVermelho + tamanhoQuadrados) {
-
-                corAtual = 'red';
-
-            } else if (x > xVerde && x < xVerde + tamanhoQuadrados) {
-
-                corAtual = 'green';
-
-            } else if (x > xAzul && x < xAzul + tamanhoQuadrados) {
-
-                corAtual = 'blue';
-            }
-        }
-    }
-
-    var tela = document.querySelector('canvas');
-    var pincel = tela.getContext('2d');
-    pincel.fillStyle = 'lightgray';
-    pincel.fillRect(0, 0, 600, 400);
-
-    var desenha = false;
-    var corAtual = 'blue';
-    var xVermelho = 0;
-    var xVerde  = 50;
-    var xAzul = 100;
-    var yQuadrados = 0;
-    var tamanhoQuadrados = 50;
-
-    desenhaPaletaDeCores();
-
-    tela.onmousemove = lidaComMovimentoDoMouse;
-
-    tela.onmousedown = habilitaDesenhar;
-
-    tela.onmouseup = desabilitaDesenhar;
-
-    tela.onclick = selecionaCor;
-
-</script>
 
 
