--- a/blog-subsi/texte.html
+++ b/blog-subsi/texte.html
@@ -4,7 +4,7 @@
 
 <script>
    function pulaLinha() {
-        document.write("<br");
+        document.write("<br>");
     }
 
     function mostra(frase) {
@@ -20,6 +20,9 @@ while( contador >= 0) {
   contador = contador - 1;
 }
 mostra("FIM");
+
+
+document.write("<h1>Hello World!</h1><p>Have a nice day!</p>");
 
 
 </script>
